# RL-Class-25

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.base  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-base-image.yml  test.yml
examples/: benchmark_vectorization.py  cartpole_basic.py  cartpole_vectorized.py
homeworks/: __init__.py
homeworks/homework_1/: README.md
homeworks/homework_1/problem_1/: README.md  build_transition_table.py  policy.py  problem_1.py  transition_dones.npy  transition_next_states.npy  transition_rewards.npy
homeworks/homework_1_solutions/problem_1/: checkpoint.pt  policy.py  problem_1.py  q_table.npy  q_table_highgamma.npy
homeworks/homework_2/: README.md  __init__.py
homeworks/homework_2/problem_1/: README.md  __init__.py  ppo_components.py  test_components.py
homeworks/homework_2/problem_2/: README.md  __init__.py  dqn_components.py  test_components.py
homeworks/homework_2/problem_3/: README.md  train_ppo.py
homeworks/homework_2/problem_4/: README.md  train_dqn.py
homeworks/homework_2_solutions/: README.md  __init__.py
homeworks/homework_2_solutions/problem_1/: README.md  __init__.py  ppo_components.py
homeworks/homework_2_solutions/problem_2/: README.md  __init__.py  (+2 more)
hw-1/: double_q_learning_monte_carlo.py
server/: README.md  app.py  evaluate.py  import_students.py  sandbox.py
server/sample_submission/: policy.py
server/templates/: base.html  leaderboard.html  my_submissions.html  submit.html
server/tests/: test_app.py  test_evaluate.py  test_import_students.py  test_sandbox.py
(+9 files in other folders)
