[project]
name = "rl-class-25"
version = "0.1.0"
description = "Reinforcement Learning course project using PufferLib"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "pufferlib>=3.0.0",
    "python-multipart>=0.0.21",
    "requests>=2.32.0",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
]
